# didattica-new

./: .dockerignore  Dockerfile  README.md  bottom-modal.html  chat.html  db.sqlite3  firebase.html  gemini.md  hello.py  locustfile.py  pyproject.toml  requirements.txt  supabase.md  test.html
accounts/: adapter.py  admin.py  apps.py  consumers.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_profile_created_at_profile_updated_at.py  0003_profile_name.py  0004_alter_profile_profile_image.py  0005_profile_followers_profile_following.py  0006_profile_reply_to_profile_shared_post.py  0007_remove_profile_reply_to_remove_profile_shared_post.py  0008_profile_telegraph_profile_url.py  0009_remove_profile_telegraph_profile_url_and_more.py  0010_remove_profile_profile_image_url_and_more.py  0011_remove_profile_telegraph_profile_url.py  0012_alter_profile_followers_alter_profile_following.py  0013_profile_last_post_time_alter_profile_followers.py  0014_alter_profile_website.py  (+1 more)
ai/: admin.py  urls.py  views.py
aichat/: admin.py  apps.py  forms.py  gemini_client.py  models.py  prompt.py  urls.py  utils.py  views.py
community/: admin.py  forms.py  models.py  urls.py  views.py
config/: asgi.py  db.sqlite3  routing.py  settings.py  urls.py
config/settings/: local.py  (+1 more)
didattica/: settings.py  urls.py
notifications/: apps.py  consumers.py  context_processors.py  models.py  signals.py  urls.py  views.py
settings/: __init__.py  production.py
templates/: base.html  base_auth.html  components.yaml  index.html
(+70 files in other folders)
