[project]
name = "didattica-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.6",
    "firebase-admin>=6.6.0",
    "psycopg2>=2.9.10",
    "py-vapid>=1.9.2",
    "python-dotenv>=1.0.1",
    "pywebpush>=2.0.3",
    "sentry-sdk[django]>=2.22.0",
    "webpush>=1.0.5",
]
